--- a/module_2/prefolio/predolio.html
+++ b/module_2/prefolio/predolio.html
@@ -12,13 +12,15 @@
 		<h1>Prefolio Aviel</h1>
 
 		<h2>Over mij</h2>
-		
-		Mijn naam is Aviel. Ik ben 16 jaar en woon in Molenaarsgraaf.
+		<img src="someone.jpg" alt="Een persoon">
+
+		<p>Mijn naam is Aviel. Ik ben 16 jaar en woon in Molenaarsgraaf.</p>
 		
 		
 		<h2>Waarom gekozen voor Software Developer?</h2>
 		
 		Ik ben een enthousiaste, gedreven student in de opleiding Software Development. Sinds enkele jaren ben ik al bezig met programmeren van simpel sites tot mechanics voor programmen in Python. Programmeren past helemaal bij mij.
+		<iframe src="https://youtu.be/hkHHoKrpFbE?si=ktSWE6-IR4-Dw8ch"></iframe>
 		<h2>Opleiding</h2>
 		
 		Mijn opleiding heeft me ruim voldoende voorbereid op een oriënterende stage in de praktijk. Ik heb kennisgemaakt met het volgende:
@@ -39,6 +41,11 @@
 		
 		<p>Python Programming
 		problem analysis, solution design, structured testing, software quality: DRY, SRP</p>
+
+		<video width="320" height="240" controls>
+			<source src="video/robotarm.mp4" type="video/mp4">
+			<source src="video/robotarm.ogv" type="video/ogg">
+		  </video>
 		
 		<p>Verzamelen van data
 		SQL queries, where clauses, aggragates, joins</p>
