--- a/module_2/prefolio/predolio.html
+++ b/module_2/prefolio/predolio.html
@@ -1,71 +1,58 @@
 <!DOCTYPE html>
-
 <html lang="nl">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>Titel van de pagina</title>
-		<link rel="stylesheet" href="css/styles.css">
-	</head>
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio Aviel</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
 
-	<body>
-		<h1>Prefolio Aviel</h1>
+<body>
+    <header>
+        <h1>Portfolio Aviel</h1>
+        <img src="someone.jpg" alt="Een persoon">
+    </header>
 
-		<h2>Over mij</h2>
-		<img src="someone.jpg" alt="Een persoon">
+    <section>
+        <h2>Over mij</h2>
+        <p>Mijn naam is Aviel. Ik ben 16 jaar oud en woon in Molenaarsgraaf.</p>
+    </section>
 
-		<p>Mijn naam is Aviel. Ik ben 16 jaar en woon in Molenaarsgraaf.</p>
-		
-		
-		<h2>Waarom gekozen voor Software Developer?</h2>
-		
-		Ik ben een enthousiaste, gedreven student in de opleiding Software Development. Sinds enkele jaren ben ik al bezig met programmeren van simpel sites tot mechanics voor programmen in Python. Programmeren past helemaal bij mij.
-		<iframe src="https://youtu.be/hkHHoKrpFbE?si=ktSWE6-IR4-Dw8ch"></iframe>
-		<h2>Opleiding</h2>
-		
-		Mijn opleiding heeft me ruim voldoende voorbereid op een oriënterende stage in de praktijk. Ik heb kennisgemaakt met het volgende:
-		
-		<h3>Ontwikkeltalen:</h3>
-		<ul>
-			<li>Python (uitgebreid)</li>
-			<li>HMTL (intro)</li>
-			<li>CSS (intro)</li>
-			<li>JavaScript (intro)</li>
-			<li>SQL (intro)</li>
-			<li>PHP (projecten)</li>
-		</ul>
-		<h3>Succesvol afgeronde modules:</h3>
-		
-		<p>Bootcamp: Python syntax, toepassing en werking
-		value types, expressions, operators, variables, typecasting, conditional statements, while loops, exception handling, lists, for loops, nesting, function definitions, GIT</p>
-		
-		<p>Python Programming
-		problem analysis, solution design, structured testing, software quality: DRY, SRP</p>
+    <section>
+        <h2>Waarom Software Developer?</h2>
+        <p>
+            Ik ben een enthousiaste, gedreven student in de opleiding Software Development. Sinds enkele jaren ben ik bezig met programmeren, van eenvoudige websites tot het ontwikkelen van functionaliteiten voor programma's in Python. Programmeren past helemaal bij mij.
+        </p>
+        <iframe src="https://www.youtube.com/embed/hkHHoKrpFbE"></iframe>
+    </section>
 
-		<video width="320" height="240" controls>
-			<source src="video/robotarm.mp4" type="video/mp4">
-			<source src="video/robotarm.ogv" type="video/ogg">
-		  </video>
-		
-		<p>Verzamelen van data
-		SQL queries, where clauses, aggragates, joins</p>
-		
-		<p>Frontend web development - webpages
-		HTML, CSS, URL's, Responsive webdesign, Bootstrap</p>
-		
-		<p>Frontend web development - interactive user interfaces
-		JavaScript, HTML forms, DOM manipulation, event handling, callbacks, API consuming</p>
-		
-		<p>Backend programming
-		Routing, controllers, models, database tasks, multi tier. Zelf gekozen taal: PHP</p>
-		
-		<p>Developer Skills
-		Communiceren, samenwerken, analyseren, ontwerpen, plannen, presenteren</p>
-		
-		<p>Basis ICT
-		Intro computers, operating systems, netwerken, client-server, http</p>
-		
-		
-	</body>
+    <section>
+        <h2>Opleiding</h2>
+        <h3>Ontwikkeltalen:</h3>
+        <ul>
+            <li>Python (gevorderd)</li>
+            <li>HTML (introductie)</li>
+            <li>CSS (introductie)</li>
+            <li>JavaScript (introductie)</li>
+            <li>SQL (introductie)</li>
+            <li>PHP (projecten)</li>
+        </ul>
+
+        <h3>Succesvol afgeronde modules:</h3>
+        <p>Bootcamp: Python-syntax, toepassing en werking, enz.</p>
+        <!--* Voeg de overige afgeronde modules hier toe -->
+
+        <video width="320" height="240" controls>
+            <source src="video/robotarm.mp4" type="video/mp4">
+            <source src="video/robotarm.ogv" type="video/ogg">
+        </video>
+        <!--* Voeg de overige modules met video hier toe -->
+    </section>
+
+    <footer>
+        <p>&copy; Aviel</p>
+    </footer>
+</body>
 
 </html>
+
