--- a/webpages/extra/selectors/snoepwinkel2.html
+++ b/webpages/extra/selectors/snoepwinkel2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Snoepwinkel</title>
-  <link rel="stylesheet" href="general.css">
+  <link rel="stylesheet" href="general2.css">
   <meta charset="utf-8">
 </head>
 <body class="body">
