--- a/module_2/boardgames/boardgames.html
+++ b/module_2/boardgames/boardgames.html
@@ -14,6 +14,9 @@
 
 
     <section>
+        <nav>
+        <a href="boardgames.html">home</a><a href="pandemic.html"> pandemic</a>
+        </nav>
         <h2>The Joy of Board Games</h2>
 
         <h3>Building Social Connections</h3>
@@ -43,8 +46,6 @@
         <source src="video/playing.mp4" type="video/mp4">
         <source src="video/playing.ogv" type="video/ogg">
     </video>
-
-    <!-- You had an incorrect source URL for the second video. It should be a valid URL or local video file. -->
     <video width="320" height="240" controls>
         <source src="https://youtu.be/zQVHkl8oQEU?si=Rh1EfUbhS0y1IWBb" type="video/mp4">
     </video>
