--- a/module_2/boardgames/pandemic.html
+++ b/module_2/boardgames/pandemic.html
@@ -3,8 +3,8 @@
 <head>
   <title>Pandemic</title>
   <meta charset="utf-8"/>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/game.png" type="image/x-icon">
+  <link rel="stylesheet" href="styling/styles.css">
+  <link rel="icon" href="media/game.png" type="image/x-icon">
 </head>
 
 <body>
@@ -15,12 +15,12 @@
   <section>
     <nav>
       <a href="boardgames.html">home</a><a href="pandemic.html"> pandemic</a>
-      <a href="images/pandemic.jpg" target="_blank"> pandemic foto </a>
+      <a href="media/pandemic.jpg" target="_blank"> pandemic foto </a>
     </nav>
     <h2>The Game</h2>
     <h3>Objective - Curing diseases</h3>
     <p>The primary objective of Pandemic is to find cures for four deadly diseases that are threatening to sweep the globe. Players must work collaboratively, utilizing their individual roles and abilities, to discover the cures before time runs out. It's a race against the clock, as outbreaks, epidemics, and limited resources continually test the players' teamwork and decision-making skills.</p>
-    <img width="400" src="images/pandemic.jpg">
+    <img width="400" src="media/pandemic.jpg">
   </section>
   <section>
     <h3>Components</h3>
