--- a/module_2/boardgames/boardgames.html
+++ b/module_2/boardgames/boardgames.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Board games</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styling/styles.css">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
         <h3>Building Social Connections</h3>
 
         <p>Board games go beyond the tabletop and they build lasting connections with friends and family. Gathering around a board game fosters laughter, camaraderie, and shared experiences. From cooperative adventures like Pandemic to strategic classics like Settlers of Catan, board games create bonds and turn acquaintances into lifelong friends.</p>
-        <img src="images/codenames.jpg" alt="Spel codenames">
+        <img src="media/codenames.jpg" alt="Spel codenames">
     </section>
 
     <section>
