--- a/module_2/index.html
+++ b/module_2/index.html
@@ -1,29 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Module 2 Producten</title>
-
 </head>
 <body>
 
     <h2>Module 2 Producten</h2>
 
     <div class="product">
-        <img src="screenshots/Scherm­afbeelding 2023-12-05 om 08.58.50.png" alt="Product 1">
-        <h3><a href="product1.html">Product 1</a></h3>
-        <p>Korte omschrijving van Product 1.</p>
+        <img src="screenshots/boardgames.png" alt="Product 1">
+        <h3><a href="boardgames/boardgames.html">Boardgames</a></h3>
+        <p>Ontdek diverse bordspellen voor entertainment.</p>
     </div>
 
     <div class="product">
-        <img src="" alt="Product 2">
-        <h3><a href="product2.html">Product 2</a></h3>
-        <p>Korte omschrijving van Product 2.</p>
+        <img src="screenshots/boxmodel.png" alt="Product 2">
+        <h3><a href="webpages/extra/boxmodel/boxmodel.html">Boxmodel</a></h3>
+        <p>Leer de basis en complexiteit van het CSS-boxmodel voor effectieve paginalay-out.</p>
     </div>
 
-    <!-- Voeg meer producten toe op dezelfde manier -->
+    <div class="product">
+        <img src="screenshots/flexbox.png" alt="Product 3">
+        <h3><a href="webpages/extra/flexbox/navigate.html">Flexbox</a></h3>
+        <p>Beheers de kunst van flexibele boxlay-out voor responsieve en dynamische webontwerpen.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/pandemic.png" alt="Product 4">
+        <h3><a href="boardgames/pandemic.html">Pandemic</a></h3>
+        <p>Beleef de spanning van het bordspel "Pandemic" en red de wereld van uitbraken.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/prefolio.png" alt="Product 5">
+        <h3><a href="prefolio/prefolio.html">Prefolio</a></h3>
+        <p>Toon je portfolio met Prefolio, een platform voor projecten en prestaties.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/prefolio layout.png" alt="Product 6">
+        <h3><a href="prefolio/projecten-voorbeeld.html">Prefolio Layout</a></h3>
+        <p>Ontdek verschillende lay-outopties voor Prefolio-projecten met dit voorbeeld.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/recept.png" alt="Product 7">
+        <h3><a href="recepten/gehaktbrood.html">Recept</a></h3>
+        <p>Ontdek heerlijke recepten, te beginnen met het smakelijke Gehaktbrood.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/responsive.png" alt="Product 8">
+        <h3><a href="webpages/extra/responsive/responsive.html">Responsive</a></h3>
+        <p>Creeër responsieve webontwerpen voor een naadloze ervaring op verschillende schermformaten.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/snoepwinkel.png" alt="Product 9">
+        <h3><a href="webpages/extra/selectors/snoepwinkel.html">Snoepwinkel</a></h3>
+        <p>Bouw een zoete en aantrekkelijke snoepwinkelwebpagina met CSS-selectors.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/grid.png" alt="Product 10">
+        <h3><a href="webpages/extra/les-grid/les-grid.html">Grid</a></h3>
+        <p>Leer de kracht van CSS Grid voor geavanceerde en responsieve lay-outs op je websites.</p>
+    </div>
+
+    <div class="product">
+        <img src="screenshots/layout.png" alt="Product 11">
+        <h3><a href="webpages/extra/layout/layout.html">Layout</a></h3>
+        <p>Ontdek verschillende paginalay-outs voor visuele aantrekkelijkheid van je projecten.</p>
+    </div>
 
 </body>
 </html>
